# adrenasquads

./: .gitignore  Adrena_Squads_Design_Document.html  Anchor.toml  README.md  SUBMISSION.md  TESTING_REPORT.md  package-lock.json  package.json
.claude/: launch.json
backend/: package-lock.json  package.json
backend/src/: demo-data.ts  index.ts
backend/src/crank/: lifecycle.ts
backend/tests/: mutagen.test.ts  scoring.test.ts
frontend/: .vercelignore  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  BadgeGrid.tsx  CompetitionTimer.tsx  Providers.tsx  Sidebar.tsx  SquadCard.tsx  SquadLeaderboard.tsx  StrategyRadar.tsx  WalletProvider.tsx
frontend/lib/: adrena-program.ts  adrena_squads_idl.json  api.ts  demo-data.ts  mock-data.ts
programs/adrena-squads/: Cargo.toml
programs/adrena-squads/src/: errors.rs  lib.rs
programs/adrena-squads/src/instructions/: claim_prediction.rs  claim_prize.rs  create_competition.rs  create_prediction_pool.rs  create_squad.rs  end_competition.rs  finalize_round.rs  init_user_profile.rs  initialize_config.rs  join_squad.rs  kick_member.rs  leave_squad.rs  lock_predictions.rs  mod.rs  place_prediction.rs  register_squad_entry.rs  resolve_prediction.rs  start_competition.rs
programs/adrena-squads/src/state/: claim_record.rs  competition.rs  config.rs  mod.rs  prediction.rs  squad.rs  squad_entry.rs  user_profile.rs
scripts/: create-test-competition.ts  initialize.ts  live-scores.ts  simulate-round.ts
tests/: adrena-squads.ts
(+24 files in other folders)
